--- a/app/views/suppliers/edit.html.erb
+++ b/app/views/suppliers/edit.html.erb
@@ -3,7 +3,7 @@
   <div class="module">
     <ul>
       <li class="exit">
-        <%= link_to([t "global.exit"], suppliers_path) %>
+        <%= link_to (t "global.exit"), suppliers_path %>
       </li>
     </ul>
 
@@ -20,7 +20,7 @@
  <div class="tabcontainer">
 
 <div id="sc1" class="tabcontent">
-<% simple_form_for @supplier do |f| %>
+<%= simple_form_for(@supplier) do |f| %>
                 <%= f.error_notification %>
                 <%= f.input :active, :label =>(t "global.active") %>
                 <%= f.input :company_name, :label =>(t "supplier.company_name"), :input_html => {:size => 50} %>
