--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -28,18 +28,18 @@
 
 <% @supplier.each do |supplier| %>
   <tr align="center" class="<%= cycle :odd, :even %>">
-    <td><%=h supplier.company_name %></td>
-    <td><%=h supplier.phone %></td>
-    <td><%=h supplier.fax %></td>
-    <td><%=h supplier.email %></td>
-    <td><%=h supplier.contact_name %></td>
-    <td><%=h supplier.contact_phone %></td>
-    <td><%=h supplier.active %></td>
-    <td width="80">
-        <% if can? :read, @supplier %><%= link_to(image_tag('view.png', :title => [t "global.view"]), supplier )%> <% end %>
-        <% if can? :edit, @supplier %> <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_supplier_path(supplier)) %>   <% end %>
-        <% if can? :destroy, @supplier %><%= link_to(image_tag('trash.png', :title => [t "global.delete"]), supplier, :confirm => 'Are you sure?', :method => :delete ) %> <% end %>
-        <%= link_to(image_tag('brick_add.png', :title => [t "product.new"]), new_product_path(:supplier_name => supplier.company_name, :supplier_id => supplier.id )) %>
+    <td><%= supplier.company_name %></td>
+    <td><%= supplier.phone %></td>
+    <td><%= supplier.fax %></td>
+    <td><%= supplier.email %></td>
+    <td><%= supplier.contact_name %></td>
+    <td><%= supplier.contact_phone %></td>
+    <td><%= supplier.active %></td>
+    <td width="90">
+        <% if can? :read, Supplier %><%= link_to(image_tag('view.png', :title => (t "global.view")), supplier )%> <% end %>
+        <% if can? :edit, Supplier %> <%= link_to(image_tag('edit.png', :title => (t "global.edit")), edit_supplier_path(supplier)) %>   <% end %>
+        <%= link_to(image_tag('brick_add.png', :title => (t "product.new")), new_product_path(:supplier_name => supplier.company_name, :supplier_id => supplier.id )) %> |
+      <%= link_to(image_tag('delete.png', :title => (t "global.delete")), supplier, :confirm => 'Are you sure?', :method => :delete ) if can? :destroy, Supplier %>
     </td>
   </tr>
 <% end %>
