--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -97,7 +97,7 @@
       <strong><%= t "global.email" %>:</strong>
     </td>
     <td align="left">
-     <%= link@supplier.email %>
+     <%= link_to @supplier.email %>
     </td>
   </tr>
     <tr>
