--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require jquery-ui-custom
+ *= require jquery.ui.datepicker
+ *= require jquery.ui.autocomplete
  *= require myitcrm
 */
